--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,5 @@
-body {
+#tudo {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: none;
 }
 
 #titulo {
@@ -25,4 +24,8 @@ body {
 .button {
   margin-left: 30px;
   font-size: 20px;
+}
+
+#imagem {
+  margin-left: 500px;
 }
