--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.form-box {
+  margin: 0 auto;
+  text-align: center;
+  width: 450px;
+  input {
+    width: 400px;
+    border-radius: 6px;
+    padding: 10px 5px;
+    margin: 10px;
+    display: block;
+    font-size: 30px;
+  }
+
+  button {
+    padding: 5px;
+    font-size: 30px;
+  }
+}
