--- a/src/app/farmaceutico/farmaceutico.component.html
+++ b/src/app/farmaceutico/farmaceutico.component.html
@@ -11,18 +11,7 @@
       type="text"
       maxlength="64"
     />
-    <input
-      formControlName="cnpj"
-      placeholder="CNPJ"
-      type="text"
-      maxlength="18"
-    />
-    <input
-      formControlName="email"
-      placeholder="E-mail"
-      type="email"
-      maxlength="64"
-    />
+    <input formControlName="cpf" placeholder="CPF" type="text" maxlength="14" />
     <input
       formControlName="niver"
       placeholder="Data de Nascimento"
