--- a/src/app/cpf/cpf.component.html
+++ b/src/app/cpf/cpf.component.html
@@ -1,6 +1,5 @@
 <div id="tudo">
-  <h1 id="titulo">Valida CPF</h1>
-  <img id="imagem" src="" alt="" />
+  <h1 class="titulo">Valida CPF</h1>
   <div id="pridiv">
     <p class="paragrafo">Digite seu cpf:</p>
     <input
