--- a/src/app/farmaceutico/farmaceutico.component.html
+++ b/src/app/farmaceutico/farmaceutico.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <p id="titulo">Cadastro de Farmacêutico</p>
+  <h1 class="titulo">Cadastro de Farmacêutico</h1>
   <form
     class="form-box"
     [formGroup]="formFarmaceutico"
@@ -17,8 +17,26 @@
       placeholder="Data de Nascimento"
       type="date"
     />
-    <button type="submit">Cadastrar</button>
+    <button type="submit" [disabled]="!formFarmaceutico.valid">
+      Cadastrar
+    </button>
   </form>
-  <p>Result: {{ formFarmaceutico.getRawValue() | json }}</p>
-  <p>Form é valido? {{ formFarmaceutico.valid ? "Sim" : "Não" }}</p>
+  <table class="tabela">
+    <tr>
+      <th>ID</th>
+      <th>Nome</th>
+      <th>CPF</th>
+      <th>Data de Nascimento</th>
+      <th>Idade</th>
+      <th>Documento Válido</th>
+    </tr>
+    <tr *ngFor="let farmaceutico of list">
+      <td>{{ farmaceutico.id }}</td>
+      <td>{{ farmaceutico.nome }}</td>
+      <td>{{ farmaceutico.documento }}</td>
+      <td>{{ farmaceutico.niver | date: "dd/MM/yyyy" }}</td>
+      <td>{{ farmaceutico.idade }}</td>
+      <td>{{ farmaceutico.documentoValido }}</td>
+    </tr>
+  </table>
 </div>
