--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
     <li><a routerLink="/cliente">Cliente</a></li>
     <li><a routerLink="/fornecedor">Fornecedor</a></li>
     <li><a routerLink="/farmaceutico">Farmacêutico</a></li>
-    <li><a routerLink="/">Produto</a></li>
+    <li><a routerLink="/produto">Produto</a></li>
     <li><a routerLink="/cpf">CPF</a></li>
     <li><a routerLink="/sobre">Sobre</a></li>
   </ul>
