--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,23 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-image: url("../src/assets/pica-pau-retardado.jpeg");
+  background-repeat: no-repeat;
+  background-size: 50%;
+  background-position: 80% 0;
+  h1 {
+    font-size: px;
+  }
 }
 
 .form-box {
   margin: 0 auto;
   text-align: center;
-  width: 450px;
+  width: 30%;
   input {
-    width: 400px;
+    width: 500px;
     border-radius: 6px;
     padding: 10px 5px;
     margin: 10px;
     display: block;
-    font-size: 30px;
+    font-size: 20px;
   }
 
   button {
     padding: 5px;
     font-size: 30px;
+  }
+}
+
+.tabela,
+th,
+td {
+  font-size: 20px;
+  text-align: center;
+  margin: 50px auto;
+  padding: 0;
+  width: 50%;
+  border: 3px solid green;
+  background-color: #fff;
+  th {
+    padding: 5px;
   }
 }
