--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,13 +8,35 @@ body {
   h1 {
     font-size: px;
   }
+  button{
+    cursor: pointer;
+  }
 }
+
+.box {
+  text-align: center;
+
+  p {
+    font-weight: bold;
+  }
+  button {
+    padding: 6px;
+    font-weight: bold;
+    font-size: 18px;
+    width: 100%;
+  }
+  hr {
+    border: none;
+    border-top: solid 1px #333;
+  }
+}
+
 
 .form-box {
   margin: 0 auto;
   text-align: center;
   width: 30%;
-  input {
+  input, select {
     width: 500px;
     border-radius: 6px;
     padding: 10px 5px;
@@ -41,5 +63,34 @@ td {
   background-color: #fff;
   th {
     padding: 5px;
+  }
+}
+
+.modal {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  .fechar {
+    text-align: right;
+    padding-right: 30px;
+    cursor: pointer;
+  }
+  .form-box {
+    margin-top: 250px;
+    background-color: #fff;
+    z-index: 9999;
+    position: relative;
+  }
+  .fundo {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: #444;
+    opacity: 0.8;
+    z-index: 999;
   }
 }
